unpackaged/main/default/objects/Legal_Contract__c/Legal_Contract__c.object-meta.xml
<CustomObject>
    <label>Legal Contract</label>
    <nameField>
        <displayFormat>Legal Contract - {0}</displayFormat>
        <label>Legal Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>