unpackaged/main/default/objects/Legal_Contract__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending from Head of Sales</fullName>
            </value>
            <value>
                <fullName>Pending from Head of Legal</fullName>
            </value>
            <value>
                <fullName>Approved by Head of Sales</fullName>
            </value>
            <value>
                <fullName>Approved by Head of Legal</fullName>
            </value>
            <value>
                <fullName>Rejected by Head of Sales</fullName>
            </value>
            <value>
                <fullName>Rejected by Head of Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>