unpackaged/main/default/objects/Legal_Contract__c/fields/Back_Up_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Back_Up_Owner_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Back Up Owner Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>