unpackaged/main/default/objects/Legal_Contract__c/fields/Contract_Signed_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_by_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Signed by Customer</label>
    <type>Checkbox</type>
</CustomField>