unpackaged/main/default/objects/Legal_Contract__c/fields/Date_Time_Contract_Signed_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Contract_Signed_by_Customer__c</fullName>
    <formula>if( Contract_Signed_by_Customer__c ,Now(),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Time Contract Signed by Customer</label>
    <type>DateTime</type>
</CustomField>