unpackaged/main/default/objects/Legal_Contract__c/fields/Date_Time_Contract_Signed_by_Management__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Contract_Signed_by_Management__c</fullName>
    <formula>If( Contract_Signed_by_Management__c ,now(),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Time Contract Signed by Management</label>
    <type>DateTime</type>
</CustomField>