unpackaged/main/default/objects/Legal_Contract__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Legal Contracts</relationshipLabel>
    <relationshipName>Legal_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>