unpackaged/main/default/objects/Legal_Contract__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Term</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>