unpackaged/main/default/objects/Legal_Contract__c/fields/Sales_Manager_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Email_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Manager Email Id</label>
    <type>Email</type>
</CustomField>