unpackaged/main/default/objects/Legal_Contract__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legal Request</fullName>
            </value>
            <value>
                <fullName>Zone Head Approval</fullName>
            </value>
            <value>
                <fullName>Legal Review</fullName>
            </value>
            <value>
                <fullName>Legal Approval</fullName>
            </value>
            <value>
                <fullName>Customer Signed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Pending Customer Signature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>