unpackaged/main/default/objects/Legal_Contract__c/recordTypes/Approved_Legal_Contract.recordType-meta.xml
<RecordType>
    <fullName>Approved_Legal_Contract</fullName>
    <active>true</active>
    <label>Approved Legal Contract</label>
</RecordType>