unpackaged/main/default/objects/Legal_Contract__c/recordTypes/Change_Legal_Contract.recordType-meta.xml
<RecordType>
    <fullName>Change_Legal_Contract</fullName>
    <active>true</active>
    <label>Change Legal Contract</label>
</RecordType>