unpackaged/main/default/objects/Legal_Contract__c/validationRules/Contract_Signed_By_Management.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Signed_By_Management</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Contract_Signed_by_Management__c, if((!Contract_Signed_by_Customer__c),true,false),false)</errorConditionFormula>
    <errorMessage>Contract Signed by Customer need to be checked</errorMessage>
</ValidationRule>