unpackaged/main/default/objects/Legal_Contract__c/listViews/Queue_Legal_Contract.listView-meta.xml
<ListView>
    <fullName>Queue_Legal_Contract</fullName>
    <filterScope>Queue</filterScope>
    <label>Legal Executive</label>
    <queue>Legal_Executive</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>